Refactor color scheme to replace green with #E6411C for consistency across styles

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                                     <div class="dgm-about-content">
                                         <div class="tp_fade_anim" data-delay=".3">
                                             <p>
-                                                We’re a passionate team of innovators empowering businesses with local insights and global expertise. From digital growth to unforgettable films and doorstep meals, we go the full 9 yards.
+                                                We’re a passionate team of innovators empowering businesses with local insights and world-class expertise. From digital growth to unforgettable films and doorstep meals, we go the full 9 yards.
                                             </p>
                                         </div>
                                         <div>
@@ -486,15 +486,15 @@
                 <!-- step area end -->
 
                 <!-- service area end -->
-                <div class="dgm-service-area dgm-service-radius pt-120 black-bg-5 z-index-1">
+                <div class="dgm-service-area dgm-service-radius pt-120 black-bg-yard z-index-1">
                     <div class="container container-1230">
                         <div class="row">
                             <div class="col-xl-7">
                                 <div class="dgm-service-title-box z-index-1 mb-60">
                                     <span class="tp-section-subtitle subtitle-grey mb-15 text-white tp_fade_anim" data-delay=".3">Services</span>
                                     <h4 class="tp-section-title-grotesk text-white tp_fade_anim" data-delay=".5">
-                                        Growing sales through exceptional
-                                        <span class="p-relative">
+                                        Solutions for a <br> Digital First World.
+                                        <!-- <span class="p-relative">
                                             services
                                             <span class="tp-section-title-shape">
                                                 <svg width="231" height="15" viewBox="0 0 231 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -507,7 +507,7 @@
                                                     </defs>
                                                 </svg>
                                             </span>
-                                        </span>
+                                        </span> -->
                                     </h4>
                                 </div>
                             </div>
@@ -523,14 +523,13 @@
                                             <div class="col-lg-5">
                                                 <div class="dgm-service-content-left d-inline-flex align-items-center">
                                                     <span>01</span>
-                                                    <h4 class="dgm-service-title-sm"><a href="#">SEO <br> Marketing</a>
+                                                    <h4 class="dgm-service-title-sm"><a href="#">Social Media <br> Management</a>
                                                     </h4>
                                                 </div>
                                             </div>
                                             <div class="col-lg-7">
                                                 <div class="dgm-service-content-right d-flex align-items-center justify-content-between">
-                                                    <p>We immerse ourselves in your issues and we put our <br> knowledge
-                                                        and expertise at your service</p>
+                                                    <p>We handle your social media accounts, crafting compelling content to build brand loyalty and engagement.</p>
                                                     <a class="dgm-service-link" href="#">
                                                         <span>
                                                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -553,13 +552,12 @@
                                             <div class="col-lg-5">
                                                 <div class="dgm-service-content-left d-inline-flex align-items-center">
                                                     <span>02</span>
-                                                    <h4 class="dgm-service-title-sm"><a href="#">Social <br> Marketing</a></h4>
+                                                    <h4 class="dgm-service-title-sm"><a href="#">Branding & <br> Strategy</a></h4>
                                                 </div>
                                             </div>
                                             <div class="col-lg-7">
                                                 <div class="dgm-service-content-right d-flex align-items-center justify-content-between">
-                                                    <p>We immerse ourselves in your issues and we put our <br> knowledge
-                                                        and expertise at your service</p>
+                                                    <p>We craft powerful brand identities and data-driven strategies that give your business a competitive edge.</p>
                                                     <a class="dgm-service-link" href="#">
                                                         <span>
                                                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -582,13 +580,12 @@
                                             <div class="col-lg-5">
                                                 <div class="dgm-service-content-left d-inline-flex align-items-center">
                                                     <span>03</span>
-                                                    <h4 class="dgm-service-title-sm"><a href="#">Content <br> Marketing</a></h4>
+                                                    <h4 class="dgm-service-title-sm"><a href="#">Website <br> Development</a></h4>
                                                 </div>
                                             </div>
                                             <div class="col-lg-7">
                                                 <div class="dgm-service-content-right d-flex align-items-center justify-content-between">
-                                                    <p>We immerse ourselves in your issues and we put our <br> knowledge
-                                                        and expertise at your service</p>
+                                                    <p>We build high-performance websites from the ground up that are engineered to convert visitors into loyal customers.</p>
                                                     <a class="dgm-service-link" href="#">
                                                         <span>
                                                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -611,13 +608,12 @@
                                             <div class="col-lg-5">
                                                 <div class="dgm-service-content-left d-inline-flex align-items-center">
                                                     <span>04</span>
-                                                    <h4 class="dgm-service-title-sm"><a href="#">Email <br> Marketing</a></h4>
+                                                    <h4 class="dgm-service-title-sm"><a href="#">Video <br> Production</a></h4>
                                                 </div>
                                             </div>
                                             <div class="col-lg-7">
                                                 <div class="dgm-service-content-right d-flex align-items-center justify-content-between">
-                                                    <p>We immerse ourselves in your issues and we put our <br> knowledge
-                                                        and expertise at your service</p>
+                                                    <p>From cinematic commercials to viral-ready reels, we produce high-impact video content that tells your brand's story.</p>
                                                     <a class="dgm-service-link" href="#">
                                                         <span>
                                                             <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -646,37 +642,37 @@
                             <div class="swiper-wrapper slide-transtion">
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Creative agency</span>
+                                        <span class="tp-brand-title">Influencer Marketing</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Website marketing</span>
+                                        <span class="tp-brand-title">Graphics & Branding</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Digital marketing</span>
+                                        <span class="tp-brand-title">Copywriting</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Product marketing</span>
+                                        <span class="tp-brand-title">Email Marketing</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Research marketing</span>
+                                        <span class="tp-brand-title">AI Search Optimization</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Website marketing</span>
+                                        <span class="tp-brand-title">Ad Creative</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Lifetime Update</span>
+                                        <span class="tp-brand-title">Search Engine Optimization (SEO)</span>
                                     </div>
                                 </div>
                             </div>
@@ -687,7 +683,27 @@
                             <div class="swiper-wrapper slide-transtion">
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Creative agency</span>
+                                        <span class="tp-brand-title">Search Engine Marketing (SEM)</span>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="tp-brand-item">
+                                        <span class="tp-brand-title">Programmatic Advertising</span>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="tp-brand-item">
+                                        <span class="tp-brand-title">PPC (Pay-Per-Click) Management</span>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="tp-brand-item">
+                                        <span class="tp-brand-title">CMS (Content Management System) Development</span>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="tp-brand-item">
+                                        <span class="tp-brand-title">Data & Analytics Consulting</span>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
@@ -697,27 +713,7 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Digital marketing</span>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Product marketing</span>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Research marketing</span>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Website marketing</span>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="tp-brand-item">
-                                        <span class="tp-brand-title">Lifetime Update</span>
+                                        <span class="tp-brand-title">A/B Testing</span>
                                     </div>
                                 </div>
                             </div>
