Add video thumbnails and modal for project items to enhance user engagement

--- a/index.html
+++ b/index.html
@@ -784,43 +784,91 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-1.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="dQw4w9WgXcQ">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-2.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="jNQXAC9IVRw">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/jNQXAC9IVRw/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-3.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="ScMzIvxBSi4">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/ScMzIvxBSi4/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-1.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="dQw4w9WgXcQ">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-2.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="jNQXAC9IVRw">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/jNQXAC9IVRw/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb">
-                                            <img src="assets/img/home-03/project/project-3.jpg" alt="9Yards Content House">
+                                        <div class="dgm-project-thumb video-container" data-video-id="ScMzIvxBSi4">
+                                            <div class="video-thumbnail">
+                                                <img src="https://img.youtube.com/vi/ScMzIvxBSi4/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <div class="play-button">
+                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                    </svg>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -831,7 +879,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="#">Avocado
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Avocado
                                                     Cutter</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
@@ -840,7 +888,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="#">Slice. Pit. Scoop.</a></h4>
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=jNQXAC9IVRw" target="_blank">Slice. Pit. Scoop.</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
                                     </div>
@@ -856,7 +904,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="#">Perfect halves, every time.</a></h4>
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Perfect halves, every time.</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
                                     </div>
@@ -864,7 +912,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="#">Three tools. One cutter.</a></h4>
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=jNQXAC9IVRw" target="_blank">Three tools. One cutter.</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
                                     </div>
@@ -872,7 +920,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="#">Avocado
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=ScMzIvxBSi4" target="_blank">Avocado
                                                     Cutter</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
@@ -1594,6 +1642,164 @@
     <script type="module" src="assets/js/skew-slider/index.js"></script>
     <script type="module" src="assets/js/img-revel/index.js"></script>
 
+    <!-- Video Modal -->
+    <div id="videoModal" class="video-modal">
+        <div class="video-modal-content">
+            <span class="video-modal-close">&times;</span>
+            <div class="video-modal-body">
+                <iframe id="videoFrame" width="100%" height="400" src="" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!-- Video Modal Styles -->
+    <style>
+        .video-container {
+            position: relative;
+            cursor: pointer;
+            overflow: hidden;
+            border-radius: 10px;
+        }
+
+        .video-thumbnail {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .video-thumbnail img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .video-container:hover .video-thumbnail img {
+            transform: scale(1.05);
+        }
+
+        .play-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0.8;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+        }
+
+        .video-container:hover .play-button {
+            opacity: 1;
+            transform: translate(-50%, -50%) scale(1.1);
+        }
+
+        .video-modal {
+            display: none;
+            position: fixed;
+            z-index: 9999;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(5px);
+        }
+
+        .video-modal-content {
+            position: relative;
+            background-color: #000;
+            margin: 5% auto;
+            padding: 0;
+            border-radius: 10px;
+            width: 90%;
+            max-width: 800px;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
+        }
+
+        .video-modal-close {
+            color: #fff;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            position: absolute;
+            top: -40px;
+            right: 0;
+            cursor: pointer;
+            z-index: 10001;
+        }
+
+        .video-modal-close:hover,
+        .video-modal-close:focus {
+            color: #43E508;
+            text-decoration: none;
+        }
+
+        .video-modal-body {
+            padding: 20px;
+            background: #000;
+            border-radius: 10px;
+        }
+
+        .video-modal-body iframe {
+            border-radius: 10px;
+            min-height: 450px;
+        }
+
+        @media (max-width: 768px) {
+            .video-modal-content {
+                width: 95%;
+                margin: 10% auto;
+            }
+            
+            .video-modal-body iframe {
+                min-height: 250px;
+            }
+        }
+    </style>
+
+    <!-- Video Modal JavaScript -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const modal = document.getElementById('videoModal');
+            const videoFrame = document.getElementById('videoFrame');
+            const closeBtn = document.querySelector('.video-modal-close');
+            const videoContainers = document.querySelectorAll('.video-container');
+
+            // Open modal when video thumbnail is clicked
+            videoContainers.forEach(container => {
+                container.addEventListener('click', function() {
+                    const videoId = this.getAttribute('data-video-id');
+                    const embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1&rel=0`;
+                    
+                    videoFrame.src = embedUrl;
+                    modal.style.display = 'block';
+                    document.body.style.overflow = 'hidden';
+                });
+            });
+
+            // Close modal
+            function closeModal() {
+                modal.style.display = 'none';
+                videoFrame.src = '';
+                document.body.style.overflow = 'auto';
+            }
+
+            closeBtn.addEventListener('click', closeModal);
+
+            // Close modal when clicking outside
+            modal.addEventListener('click', function(e) {
+                if (e.target === modal) {
+                    closeModal();
+                }
+            });
+
+            // Close modal with Escape key
+            document.addEventListener('keydown', function(e) {
+                if (e.key === 'Escape' && modal.style.display === 'block') {
+                    closeModal();
+                }
+            });
+        });
+    </script>
 
     <!-- JS here -->
 
