--- a/index.html
+++ b/index.html
@@ -784,13 +784,13 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="dQw4w9WgXcQ">
+                                        <div class="dgm-project-thumb video-container" data-video-id="GaCOVzwErKg">
                                             <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <img src="https://img.youtube.com/vi/GaCOVzwErKg/maxresdefault.jpg" alt="9Yards Content House Video">
                                                 <div class="play-button">
                                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(230,65,28,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#fff"/>
                                                     </svg>
                                                 </div>
                                             </div>
@@ -799,13 +799,13 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="jNQXAC9IVRw">
+                                        <div class="dgm-project-thumb video-container" data-video-id="SDN3X_r11d0">
                                             <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/jNQXAC9IVRw/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <img src="https://img.youtube.com/vi/SDN3X_r11d0/maxresdefault.jpg" alt="9Yards Content House Video">
                                                 <div class="play-button">
                                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(230,65,28,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#fff"/>
                                                     </svg>
                                                 </div>
                                             </div>
@@ -814,58 +814,13 @@
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="ScMzIvxBSi4">
+                                        <div class="dgm-project-thumb video-container" data-video-id="_3xPT_sHIYU">
                                             <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/ScMzIvxBSi4/maxresdefault.jpg" alt="9Yards Content House Video">
+                                                <img src="https://img.youtube.com/vi/_3xPT_sHIYU/maxresdefault.jpg" alt="9Yards Content House Video">
                                                 <div class="play-button">
                                                     <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
-                                                    </svg>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="dQw4w9WgXcQ">
-                                            <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/dQw4w9WgXcQ/maxresdefault.jpg" alt="9Yards Content House Video">
-                                                <div class="play-button">
-                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
-                                                    </svg>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="jNQXAC9IVRw">
-                                            <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/jNQXAC9IVRw/maxresdefault.jpg" alt="9Yards Content House Video">
-                                                <div class="play-button">
-                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
-                                                    </svg>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide">
-                                    <div class="dgm-project-item">
-                                        <div class="dgm-project-thumb video-container" data-video-id="ScMzIvxBSi4">
-                                            <div class="video-thumbnail">
-                                                <img src="https://img.youtube.com/vi/ScMzIvxBSi4/maxresdefault.jpg" alt="9Yards Content House Video">
-                                                <div class="play-button">
-                                                    <svg width="60" height="60" viewBox="0 0 60 60" fill="none">
-                                                        <circle cx="30" cy="30" r="30" fill="rgba(255,255,255,0.9)"/>
-                                                        <path d="M25 20l15 10-15 10V20z" fill="#000"/>
+                                                        <circle cx="30" cy="30" r="30" fill="rgba(230,65,28,0.9)"/>
+                                                        <path d="M25 20l15 10-15 10V20z" fill="#fff"/>
                                                     </svg>
                                                 </div>
                                             </div>
@@ -879,8 +834,7 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Avocado
-                                                    Cutter</a></h4>
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://www.youtube.com/watch?v=GaCOVzwErKg" target="_blank">Digital Marketing Campaign</a></h4>
                                             <h5><span>Digital marketing</span></h5>
                                         </div>
                                     </div>
@@ -888,8 +842,8 @@
                                 <div class="swiper-slide">
                                     <div class="dgm-project-item">
                                         <div class="dgm-project-content text-center">
-                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://youtube.com/watch?v=jNQXAC9IVRw" target="_blank">Slice. Pit. Scoop.</a></h4>
-                                            <h5><span>Digital marketing</span></h5>
+                                            <h4 class="dgm-project-title-sm"><a class="tp-line-white" href="https://www.youtube.com/watch?v=SDN3X_r11d0" target="_blank">Brand Strategy Showcase</a></h4>
+                                            <h5><span>Branding & Strategy</span></h5>
                                         </div>
                                     </div>
                                 </div>
@@ -1729,7 +1683,7 @@
 
         .video-modal-close:hover,
         .video-modal-close:focus {
-            color: #43E508;
+            color: #E6411C;
             text-decoration: none;
         }
 
@@ -1763,6 +1717,45 @@
             const videoFrame = document.getElementById('videoFrame');
             const closeBtn = document.querySelector('.video-modal-close');
             const videoContainers = document.querySelectorAll('.video-container');
+
+            // Update text slider content to match videos
+            const textSlides = document.querySelectorAll('.dgm-project-text-active .swiper-slide');
+            const videoData = [
+                { 
+                    title: 'Digital Marketing Campaign', 
+                    category: 'Digital marketing',
+                    url: 'https://www.youtube.com/watch?v=GaCOVzwErKg'
+                },
+                { 
+                    title: 'Brand Strategy Showcase', 
+                    category: 'Branding & Strategy',
+                    url: 'https://www.youtube.com/watch?v=SDN3X_r11d0'
+                },
+                { 
+                    title: 'Creative Production', 
+                    category: 'Video Production',
+                    url: 'https://www.youtube.com/watch?v=_3xPT_sHIYU&t=584s'
+                }
+            ];
+
+            // Update each text slide to match the corresponding video
+            textSlides.forEach((slide, index) => {
+                if (index < videoData.length) {
+                    const link = slide.querySelector('.dgm-project-title-sm a');
+                    const category = slide.querySelector('h5 span');
+                    
+                    if (link) {
+                        link.textContent = videoData[index].title;
+                        link.href = videoData[index].url;
+                    }
+                    if (category) {
+                        category.textContent = videoData[index].category;
+                    }
+                } else {
+                    // Hide extra slides
+                    slide.style.display = 'none';
+                }
+            });
 
             // Open modal when video thumbnail is clicked
             videoContainers.forEach(container => {
