--- a/index.html
+++ b/index.html
@@ -844,33 +844,17 @@
                                             <a href="index.html"><img data-width="120px" src="assets/img/logo/logo-white.png" alt="9Yards Content House"></a>
                                         </div>
                                         <div class="dgm-footer-widget-paragraph mb-35">
-                                            <p>We are committed to helping you succeed, and we will work with you every step of the way.</p>
+                                            <p>Delivering exceptional content, branding, and digital marketing solutions to help your business thrive in the digital landscape.</p>
                                         </div>
                                         <div class="dgm-footer-widget-social">
-                                            <a href="#">
+                                            <a href="#" aria-label="Follow us on Facebook">
                                                 <span>
                                                     <svg width="8" height="15" viewBox="0 0 8 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M8 0H5.81818C4.85376 0 3.92883 0.383116 3.24688 1.06507C2.56493 1.74702 2.18182 2.67194 2.18182 3.63636V5.81818H0V8.72727H2.18182V14.5455H5.09091V8.72727H7.27273L8 5.81818H5.09091V3.63636C5.09091 3.44348 5.16753 3.25849 5.30392 3.1221C5.44031 2.98571 5.6253 2.90909 5.81818 2.90909H8V0Z" fill="currentcolor" />
                                                     </svg>
                                                 </span>
                                             </a>
-                                            <a href="#">
-                                                <span>
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
-                                                        <path d="M9.4507 0.5H11.2908L7.27076 5.15949L12 11.5H8.29704L5.39675 7.65451L2.07815 11.5H0.236963L4.53678 6.51615L0 0.5H3.79697L6.41858 4.01492L9.4507 0.5ZM8.8049 10.3831H9.8245L3.24294 1.55826H2.1488L8.8049 10.3831Z" fill="currentcolor" />
-                                                    </svg>
-                                                </span>
-                                            </a>
-                                            <a href="#">
-                                                <span>
-                                                    <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M9.8001 4.2002C10.914 4.2002 11.9823 4.64269 12.7699 5.43035C13.5576 6.218 14.0001 7.28629 14.0001 8.4002V13.3002H11.2001V8.4002C11.2001 8.02889 11.0526 7.6728 10.79 7.41025C10.5275 7.1477 10.1714 7.0002 9.8001 7.0002C9.42879 7.0002 9.0727 7.1477 8.81015 7.41025C8.5476 7.6728 8.4001 8.02889 8.4001 8.4002V13.3002H5.6001V8.4002C5.6001 7.28629 6.0426 6.218 6.83025 5.43035C7.6179 4.64269 8.68619 4.2002 9.8001 4.2002Z" fill="currentcolor" />
-                                                        <path d="M2.8 4.89941H0V13.2994H2.8V4.89941Z" fill="currentcolor" />
-                                                        <path d="M1.4 2.8C2.1732 2.8 2.8 2.1732 2.8 1.4C2.8 0.626801 2.1732 0 1.4 0C0.626801 0 0 0.626801 0 1.4C0 2.1732 0.626801 2.8 1.4 2.8Z" fill="currentcolor" />
-                                                    </svg>
-                                                </span>
-                                            </a>
-                                            <a href="#">
+                                            <a href="#" aria-label="Follow us on Instagram">
                                                 <span>
                                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <g>
@@ -881,33 +865,45 @@
                                                     </svg>
                                                 </span>
                                             </a>
+                                            <a href="#" aria-label="Follow us on TikTok">
+                                                <span>
+                                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M12.6 4.8C11.8 4.1 11.2 3.1 11.2 2H8.8v8.4c0 1.3-1.1 2.4-2.4 2.4s-2.4-1.1-2.4-2.4 1.1-2.4 2.4-2.4c.3 0 .5.1.8.2V5.8c-.3 0-.5-.1-.8-.1C4.4 5.7 2.8 7.3 2.8 9.2s1.6 3.5 3.6 3.5 3.6-1.6 3.6-3.5V6.4c.8.6 1.8 1 2.8 1V4.9c-.4 0-.8-.1-1.2-.1z" fill="currentcolor"/>
+                                                    </svg>
+                                                </span>
+                                            </a>
+                                            <a href="#" aria-label="Follow us on YouTube">
+                                                <span>
+                                                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M15.2 4.2c-.2-.7-.7-1.2-1.4-1.4C12.6 2.5 8 2.5 8 2.5s-4.6 0-5.8.3c-.7.2-1.2.7-1.4 1.4C.5 5.4.5 8 .5 8s0 2.6.3 3.8c.2.7.7 1.2 1.4 1.4 1.2.3 5.8.3 5.8.3s4.6 0 5.8-.3c.7-.2 1.2-.7 1.4-1.4.3-1.2.3-3.8.3-3.8s0-2.6-.3-3.8zM6.4 10.4V5.6L10.5 8l-4.1 2.4z" fill="currentcolor"/>
+                                                    </svg>
+                                                </span>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-2 col-lg-2  col-md-3 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-2 tp_fade_anim" data-delay=".4">
-                                        <h4 class="dgm-footer-widget-title">Service</h4>
+                                        <h4 class="dgm-footer-widget-title">Our Company</h4>
                                         <div class="dgm-footer-widget-menu">
                                             <ul>
-                                                <li><a href="#">UI/UX Design</a></li>
-                                                <li><a href="#">Web Design</a></li>
-                                                <li><a href="#">Branding</a></li>
-                                                <li><a href="#">Webflow</a></li>
-                                                <li><a href="#">Development</a></li>
+                                                <li><a href="#">About Us</a></li>
+                                                <li><a href="#">Testimonials</a></li>
+                                                <li><a href="#">Careers</a></li>
+                                                <li><a href="#">FAQs</a></li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-3 tp_fade_anim" data-delay=".5">
-                                        <h4 class="dgm-footer-widget-title">Company</h4>
+                                        <h4 class="dgm-footer-widget-title">Quick Links</h4>
                                         <div class="dgm-footer-widget-menu">
                                             <ul>
-                                                <li><a href="#">Home</a></li>
-                                                <li><a href="#">Agency</a></li>
-                                                <li><a href="#">Achievement</a></li>
-                                                <li><a href="#">Webflow</a></li>
-                                                <li><a href="#">Contact Us</a></li>
+                                                <li><a href="#">Services</a></li>
+                                                <li><a href="#">Portfolio</a></li>
+                                                <li><a href="#">Our Ventures</a></li>
+                                                <li><a href="#">Blog</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -949,19 +945,19 @@
                             <div class="row align-items-center">
                                 <div class="col-xl-4 col-lg-5 col-md-6">
                                     <div class="tp-copyright-2-left text-center text-md-start z-index-1">
-                                        <p>© 2025 <a href="#">Agntix</a>. All Rights Reserved.</p>
+                                        <p>© <span id="current-year"></span> <a href="#">9Yards Content House</a>. All Rights Reserved.</p>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                     <div class="tp-copyright-2-middle">
-                                        <a href="mailto:agntix@gmail.com">
+                                        <a href="mailto:info@9yards.co.ug">
                                             <span>
                                                 <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M13 14.6H5C2.6 14.6 1 13.4 1 10.6V5C1 2.2 2.6 1 5 1H13C15.4 1 17 2.2 17 5V10.6C17 13.4 15.4 14.6 13 14.6Z" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                                                     <path d="M13 5.40039L10.496 7.40039C9.672 8.05639 8.32 8.05639 7.496 7.40039L5 5.40039" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                             </span>
-                                            agntix@gmail.com
+                                            info@9yards.co.ug
                                         </a>
                                     </div>
                                 </div>
@@ -1218,6 +1214,17 @@
                     closeModal();
                 }
             });
+        });
+    </script>
+
+    <script>
+        // Automatically update copyright year
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentYear = new Date().getFullYear();
+            const yearElement = document.getElementById('current-year');
+            if (yearElement) {
+                yearElement.textContent = currentYear;
+            }
         });
     </script>
 
