Update call-to-action text to promote free quotes for better user engagement

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
                                         <div class="tp_fade_anim" data-delay=".7">
                                             <a class="tp-btn-black-square" href="#">
                                                 <span>
-                                                    <span class="text-1">Book a Strategy Call</span>
-                                                    <span class="text-2">Book a Strategy Call</span>
+                                                    <span class="text-1">Get a Free Quote</span>
+                                                    <span class="text-2">Get a Free Quote</span>
                                                 </span>
                                                 <i>
                                                     <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
