Update footer logo image for improved branding consistency

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                                 <div class="col-xl-4 col-lg-4 col-md-6 mb-40">
                                     <div class="dgm-footer-widget dgm-footer-col-1 z-index-1 tp_fade_anim" data-delay=".3">
                                         <div class="dgm-footer-logo mb-30">
-                                            <a href="index.html"><img data-width="120px" src="assets/img/logo/logo-white.png" alt="9Yards Content House"></a>
+                                            <a href="index.html"><img  src="assets/img/9yards/logo/9yards-logo-white.png" alt="9Yards Content House"></a>
                                         </div>
                                         <div class="dgm-footer-widget-paragraph mb-35">
                                             <p>Delivering exceptional content, branding, and digital marketing solutions to help your business thrive in the digital landscape.</p>
