Update index.html title and description for 9Yards branding

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Agntix - Digital Agency & Creative Portfolio HTML Template</title>
-    <meta name="description" content="">
+    <title>9Yards | Content, Food & Film Services in Kampala</title>
+    <meta name="description" content="9Yards is Uganda's leading creative conglomerate. Full-service content agency, authentic food delivery, and professional film production—all in Kampala.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/9Yards/favicon/favicon.ico">
 
     <!-- CSS here -->
     <!-- CSS here -->
