Update preloader styles and simplify body structure in index.html

--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
 
 </head>
 
-<body class="tp-magic-cursor" data-bg-color="#f4f9f8">
-
-    <!-- Begin magic cursor -->
-    <div id="magic-cursor">
-        <div id="ball"></div>
-    </div>
-    <!-- End magic cursor -->
-
-    <!-- preloader -->
+<body>
 
     <!-- preloader -->
     <div id="preloader">
