--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="tp-offcanvas-top d-flex align-items-center justify-content-between">
                 <div class="tp-offcanvas-logo">
                     <a href="index.html">
-                        <img class="logo-1" data-width="120" src="assets/img/logo/logo-black.png" alt="">
-                        <img class="logo-2" data-width="120" src="assets/img/logo/logo-white.png" alt="">
+                        <img class="logo-1" data-width="90" src="assets/img/9Yards/Logos/9Yards/JPG/9Yards-Logo-Full-Color.jpg" alt="9Yards Logo">
+                        <img class="logo-2" data-width="90" src="assets/img/9Yards/Logos/9Yards/JPG/9Yards-Logo-Full-Color.jpg" alt="9Yards Logo">
                     </a>
                 </div>
                 <div class="tp-offcanvas-close">
@@ -74,27 +74,28 @@
             </div>
             <div class="tp-offcanvas-main">
                 <div class="tp-offcanvas-content d-none d-xl-block">
-                    <h3 class="tp-offcanvas-title">Hello There!</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
+                    <h3 class="tp-offcanvas-title">9Yards Ecosystem</h3>
+                    <p>Building Uganda's creative future through integrated services in content production, authentic local cuisine, and cinematic storytelling.</p>
                 </div>
                 <div class="tp-offcanvas-menu d-xl-none">
                     <nav></nav>
                 </div>
-                <div class="tp-offcanvas-gallery d-none d-xl-block">
+
+                <!-- <div class="tp-offcanvas-gallery d-none d-xl-block">
                     <div class="row gx-2">
                         <div class="col-md-3 col-3">
                             <div class="tp-offcanvas-gallery-img fix">
-                                <a class="popup-image" href="assets/img/offcanvas/offcanvas-1.jpg"><img src="assets/img/offcanvas/offcanvas-1.jpg" alt=""></a>
+                                <a href="https://contenthouse.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Content House Logo/9Yards-Content-House-Coloured-Logo.jpg" alt="9Yards Content House Logo"></a>
                             </div>
                         </div>
                         <div class="col-md-3 col-3">
                             <div class="tp-offcanvas-gallery-img fix">
-                                <a class="popup-image" href="assets/img/offcanvas/offcanvas-2.jpg"><img src="assets/img/offcanvas/offcanvas-2.jpg" alt=""></a>
+                                <a href="https://food.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Food Logos/9Yards-Food-Coloured-Logo.png" alt="9Yards Food Logo"></a>
                             </div>
                         </div>
                         <div class="col-md-3 col-3">
                             <div class="tp-offcanvas-gallery-img fix">
-                                <a class="popup-image" href="assets/img/offcanvas/offcanvas-3.jpg"><img src="assets/img/offcanvas/offcanvas-3.jpg" alt=""></a>
+                                <a class="popup-image" href="https://film.9yards.co.ug/"><img src="assets/img/9Yards/Logos/9Yards Film Logos/2D/9Yards-Film-2D-Logo.jpg" alt="9Yards Film Logo"></a>
                             </div>
                         </div>
                         <div class="col-md-3 col-3">
@@ -103,13 +104,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
+
                 <div class="tp-offcanvas-contact">
-                    <h3 class="tp-offcanvas-title sm">Information</h3>
+                    <h3 class="tp-offcanvas-title sm">Let's Talk</h3>
                     <ul>
-                        <li><a href="tel:1245654">+ 4 20 7700 1007</a></li>
-                        <li><a href="mailto:hello@diego.com">hello@diego.com</a></li>
-                        <li><a href="#">Avenue de Roma 158b, Lisboa</a></li>
+                        <li><a href="tel:+256700488870">+256 700 488 870</a></li>
+                        <li><a href="mailto:info@9yards.co.ug">info@9yards.co.ug</a></li>
+                        <li><a href="#">Kampala, Uganda</a></li>
                     </ul>
                 </div>
                 <div class="tp-offcanvas-social">
