Add new logo image for 9Yards project

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <div class="col-xl-3 col-lg-4 col-md-6 col-4">
                         <div class="tp-header-9-logo">
                             <a href="index.html">
-                                <img class="logo-1" data-width="120" src="assets/img/logo/logo-white.png" alt="">
-                                <img class="logo-2" data-width="120" src="assets/img/logo/logo-black.png" alt="">
+                                <img class="logo-1" data-width="120" src="assets/img/9Yards/Logos/9Yards/Prepared/9Yards-Logo.png" alt="9Yards Logo">
+                                <img class="logo-2" data-width="120" src="assets/img/9Yards/Logos/9Yards/Prepared/9Yards-Logo-black.png" alt="9Yards Logo">
                             </a>
                         </div>
                     </div>
