Update hero area background color for improved visual appeal

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
             <main>
 
                 <!-- hero area start -->
-                <div class="crp-hero-area crp-hero-bg" data-bg-color="#2A4C3A" data-background="assets/img/home-09/hero/hero-bg-shape.png">
+                <div class="crp-hero-area crp-hero-bg" data-bg-color="#212282" data-background="assets/img/home-09/hero/hero-bg-shape.png">
                     <div class="container container-1550">
                         <div class="row align-items-end">
                             <div class="col-xl-9 col-lg-8">
